add feature equality

--- a/src/components/TicTacToe.scss
+++ b/src/components/TicTacToe.scss
@@ -130,7 +130,7 @@ section.board{
     }
   }
 
-  div.game .overlay-win{
+  div.game .overlay-finish{
     display: flex;
     position: absolute;
     z-index: 10;
